# Data_challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  create_presentation.py  data_report.md  docker-compose.yml  pyproject.toml  rank.py  redrob_eda.ipynb  requirements.txt  submission_metadata.yaml  team_submission.csv
configs/: local.yaml  production.yaml
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css
src/ai_hiring_intelligence/: __init__.py
src/ai_hiring_intelligence/api/: main.py
src/ai_hiring_intelligence/api/routes/: health.py  hiring.py  metadata.py
src/ai_hiring_intelligence/core/: config.py  logging.py
src/ai_hiring_intelligence/domain/: __init__.py  candidate_builder.py  candidates.py  jobs.py  ranking.py
src/ai_hiring_intelligence/schemas/: metadata.py
src/ai_hiring_intelligence/services/: __init__.py  embedding_service.py  hiring_intelligence.py  job_parser.py  ranking_service.py  retrieval_service.py
src/ai_hiring_intelligence/ui/: app.py  utils.py
src/ai_hiring_intelligence/ui/pages/: ai_insights.py  analytics.py  candidate_comparison.py  candidate_details.py  candidate_rankings.py  candidate_search.py  dashboard.py  job_parser_page.py  settings.py
tests/: test_api_health.py  test_candidate_builder.py  test_config.py  test_embedding_service.py  test_hiring_api.py  test_job_parser.py  test_ranking_scores.py  test_ranking_service.py  test_retrieval_service.py
